# user_auth_plugin

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: build-multitenant-user-management.yml  codeql.yml  security-scan.yml
coverage/: test-e2e.html  test-integration.html
docs/: 01-overview.md  02-configuration.md  03-redirect-parameters.md  04-frontend-implementation.md  05-token-handling.md  06-api-reference.md  07-troubleshooting.md  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20250108_000001_create_users_table.rs  m20250109_000002_create_user_details_table.rs  m20250110_000001_create_user_sessions_table.rs  m20250110_000002_create_user_activity_logs_table.rs  m20250111_000001_create_tenants_table.rs  m20250111_000005_create_user_tenants_junction.rs
src/: lib.rs  main.rs  server.rs
src/controllers/: auth_controller.rs  mod.rs  tenant_controller.rs  user_controller.rs  user_details_controller.rs
src/domains/: mod.rs
src/dtos/: auth_dto.rs  change_password_dto.rs  mod.rs  pagination_dto.rs  response_dto.rs  tenant_dto.rs  user_details_dto.rs  user_dto.rs
src/entities/: mod.rs  tenant.rs  user.rs  user_activity_log.rs  user_details.rs  user_session.rs  user_tenant.rs
src/errors/: mod.rs
src/infrastructures/: cache.rs  mod.rs  postgres_connection.rs  sqlite_connection.rs
src/middlewares/: api_key.rs  auth.rs  auth_middleware.rs  mod.rs
src/utils/: mod.rs  (+2 more)
web/: eslint.config.js  index.html  package-lock.json  package.json
(+230 files in other folders)
