[workspace]
members = [".", "migration"]

[package]
name = "user-auth-plugin"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
# --- Web Framework ---
actix-web = "4"
actix-multipart = "0.6"
actix-files = "0.6"
actix-web-httpauth = "0.8"
actix-cors = "0.7"
sha2 = "0.10"

# --- SeaORM (replacing SQLx) ---
sea-orm = { version = "1.1", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-uuid", "with-chrono"] }
migration = { path = "migration" }

# --- Utils ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"

# futures-util is required by middleware implementations
futures-util = "0.3"

# error handling
anyhow = "1.0"

# async trait support
async-trait = "0.1"

# password hashing
argon2 = "0.5"

# ansi color helper
ansi_term = "0.12"

tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.29"
env_logger = "0.11.8"

# JWT authentication
jsonwebtoken = "9"

rocksdb = "0.24.0"

[dev-dependencies]
# Testing utilities
mockall = "0.13"
reqwest = { version = "0.12.25", features = ["json", "blocking", "multipart", "cookies"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[[test]]
name = "e2e_contracts"
path = "tests/e2e/contracts/test-e2e.rs"

